--- a/01-Ham-or-Spam.ipynb
+++ b/01-Ham-or-Spam.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,8 +19,8 @@
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: nltk in /home/vincent/.local/lib/python3.10/site-packages (3.8)\n",
       "Requirement already satisfied: click in /home/vincent/.local/lib/python3.10/site-packages (from nltk) (8.1.3)\n",
-      "Requirement already satisfied: tqdm in /home/vincent/.local/lib/python3.10/site-packages (from nltk) (4.64.1)\n",
       "Requirement already satisfied: joblib in /home/vincent/.local/lib/python3.10/site-packages (from nltk) (1.2.0)\n",
+      "Requirement already satisfied: tqdm in /home/vincent/.local/lib/python3.10/site-packages (from nltk) (4.64.1)\n",
       "Requirement already satisfied: regex>=2021.8.3 in /home/vincent/.local/lib/python3.10/site-packages (from nltk) (2022.10.31)\n"
      ]
     },
@@ -50,6 +50,7 @@
     "from nltk.stem import WordNetLemmatizer\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.model_selection import train_test_split, KFold, cross_val_score\n",
     "import string"
    ]
   },
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +180,7 @@
        "4  Subject: do not have money , get software cds ...     1"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -544,22 +545,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9947625698324022\n"
+      "Accuracy with cross_validation:\n",
+      "[0.9930192  0.98254799 0.9895288  0.991274   0.991274   0.9947644\n",
+      " 0.991274   0.9895288  0.98776224 0.99125874]\n"
      ]
     }
    ],
    "source": [
+    "print(\"Accuracies with cross_validation:\")\n",
     "model = MultinomialNB()\n",
-    "y = df[\"spam\"]\n",
-    "model.fit(X_bow, y)\n",
-    "print(model.score(X_bow, y))\n"
+    "k_fold = KFold(n_splits=10, shuffle=True, random_state=0)\n",
+    "clf = model\n",
+    "print(cross_val_score(clf, X_bow, df[\"spam\"], cv=k_fold, n_jobs=1))\n"
    ]
   },
   {
