--- a/01-Ham-or-Spam.ipynb
+++ b/01-Ham-or-Spam.ipynb
@@ -17,11 +17,61 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: nltk in /home/vincent/.local/lib/python3.10/site-packages (3.8)\n",
-      "Requirement already satisfied: click in /home/vincent/.local/lib/python3.10/site-packages (from nltk) (8.1.3)\n",
-      "Requirement already satisfied: joblib in /home/vincent/.local/lib/python3.10/site-packages (from nltk) (1.2.0)\n",
-      "Requirement already satisfied: tqdm in /home/vincent/.local/lib/python3.10/site-packages (from nltk) (4.64.1)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in /home/vincent/.local/lib/python3.10/site-packages (from nltk) (2022.10.31)\n"
+      "Requirement already satisfied: nltk in /home/vincent/.local/lib/python3.10/site-packages (3.7)\n",
+      "Requirement already satisfied: joblib in /home/vincent/.local/lib/python3.10/site-packages (from nltk) (1.1.0)\n",
+      "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk) (4.64.0)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /home/vincent/.local/lib/python3.10/site-packages (from nltk) (2022.8.17)\n",
+      "Requirement already satisfied: click in /usr/lib/python3/dist-packages (from nltk) (8.0.3)\n",
+      "--- Logging error ---\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/utils/logging.py\", line 177, in emit\n",
+      "    self.console.print(renderable, overflow=\"ignore\", crop=False, style=style)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_vendor/rich/console.py\", line 1673, in print\n",
+      "    extend(render(renderable, render_options))\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_vendor/rich/console.py\", line 1305, in render\n",
+      "    for render_output in iter_render:\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/utils/logging.py\", line 134, in __rich_console__\n",
+      "    for line in lines:\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_vendor/rich/segment.py\", line 249, in split_lines\n",
+      "    for segment in segments:\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_vendor/rich/console.py\", line 1283, in render\n",
+      "    renderable = rich_cast(renderable)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_vendor/rich/protocol.py\", line 36, in rich_cast\n",
+      "    renderable = cast_method()\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/self_outdated_check.py\", line 130, in __rich__\n",
+      "    pip_cmd = get_best_invocation_for_this_pip()\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/utils/entrypoints.py\", line 58, in get_best_invocation_for_this_pip\n",
+      "    if found_executable and os.path.samefile(\n",
+      "  File \"/usr/lib/python3.10/genericpath.py\", line 101, in samefile\n",
+      "    s2 = os.stat(f2)\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: '/usr/bin/pip'\n",
+      "Call stack:\n",
+      "  File \"/usr/local/bin/pip\", line 8, in <module>\n",
+      "    sys.exit(main())\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/cli/main.py\", line 70, in main\n",
+      "    return command.main(cmd_args)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/cli/base_command.py\", line 101, in main\n",
+      "    return self._main(args)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/cli/base_command.py\", line 223, in _main\n",
+      "    self.handle_pip_version_check(options)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/cli/req_command.py\", line 190, in handle_pip_version_check\n",
+      "    pip_self_version_check(session, options)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/self_outdated_check.py\", line 236, in pip_self_version_check\n",
+      "    logger.warning(\"[present-rich] %s\", upgrade_prompt)\n",
+      "  File \"/usr/lib/python3.10/logging/__init__.py\", line 1489, in warning\n",
+      "    self._log(WARNING, msg, args, **kwargs)\n",
+      "  File \"/usr/lib/python3.10/logging/__init__.py\", line 1624, in _log\n",
+      "    self.handle(record)\n",
+      "  File \"/usr/lib/python3.10/logging/__init__.py\", line 1634, in handle\n",
+      "    self.callHandlers(record)\n",
+      "  File \"/usr/lib/python3.10/logging/__init__.py\", line 1696, in callHandlers\n",
+      "    hdlr.handle(record)\n",
+      "  File \"/usr/lib/python3.10/logging/__init__.py\", line 968, in handle\n",
+      "    self.emit(record)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/pip/_internal/utils/logging.py\", line 179, in emit\n",
+      "    self.handleError(record)\n",
+      "Message: '[present-rich] %s'\n",
+      "Arguments: (UpgradePrompt(old='22.2.2', new='23.0'),)\n"
      ]
     },
     {
@@ -552,9 +602,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy with cross_validation:\n",
-      "[0.9930192  0.98254799 0.9895288  0.991274   0.991274   0.9947644\n",
-      " 0.991274   0.9895288  0.98776224 0.99125874]\n"
+      "Accuracies with cross_validation:\n",
+      "0.9902232148305448\n"
      ]
     }
    ],
@@ -563,7 +612,8 @@
     "model = MultinomialNB()\n",
     "k_fold = KFold(n_splits=10, shuffle=True, random_state=0)\n",
     "clf = model\n",
-    "print(cross_val_score(clf, X_bow, df[\"spam\"], cv=k_fold, n_jobs=1))\n"
+    "results = cross_val_score(clf, X_bow, df[\"spam\"], cv=k_fold, n_jobs=1)\n",
+    "print(results.mean())\n"
    ]
   },
   {
